addons/project/static/src/views/components/project_template_buttons.scss
.o_task_template_view_more {
    color: $btn-link-hover-color !important;
}

.o-project-template, .o-task-template {
    @include media-breakpoint-up(sm) {
        .o_template_icon_group {
            visibility: hidden;
        }

        &:hover, &.focus {
            .o_template_icon_group {
                visibility: visible;

                .btn {
                    color: $text-muted !important;

                    &.btn-link:hover {
                        color: $btn-link-hover-color !important;
                    }

                    &.fa-trash:hover {
                        color: $o-danger !important;
                    }
                }
            }
        }
    }
}

